# trimora

./: .gitignore  CMakeLists.txt  README.md  setup.sh
src/: config_manager.cpp  config_manager.hpp  ffmpeg_executor.cpp  ffmpeg_executor.hpp  file_manager.cpp  file_manager.hpp  main.cpp  trim_segment.cpp  trim_segment.hpp  validator.cpp  validator.hpp  video_player.cpp  video_player.hpp
src/gui/: application.cpp  application.hpp  main_window.cpp  main_window.hpp
tests/: CMakeLists.txt
